# local-llm-memory-profiling

./: .gitignore  README.md  memory_profiler.py  pyproject.toml  requirements.txt  run_llamacpp.py  run_ollama.py  webllm_profiler.html  webllm_profiler_advanced.js
experimentals/: README.md
experiments/: config.toml  generate_prompts.py  llamacpp_engine.py  ollama_engine.py  run_suite.py  visualize_runs.py
inputs/: README.md
inputs/manual/: long_prompt.txt
inputs/prompts/: ctx_1024.txt  ctx_16384.txt  ctx_2048.txt  ctx_32768.txt  ctx_4096.txt  ctx_8192.txt  manifest.json
profiling/: process_sampler.py
results/: INSIGHT_REPORT.md
results/20260217_165615/logs/: llamacpp_f16_1024.stderr.txt  llamacpp_f16_16384.stderr.txt  llamacpp_f16_2048.stderr.txt  llamacpp_f16_32768.stderr.txt  llamacpp_f16_4096.stderr.txt  llamacpp_f16_8192.stderr.txt  llamacpp_q4_0_1024.stderr.txt  llamacpp_q4_0_16384.stderr.txt  llamacpp_q4_0_2048.stderr.txt  llamacpp_q4_0_32768.stderr.txt  llamacpp_q4_0_4096.stderr.txt  llamacpp_q4_0_8192.stderr.txt  llamacpp_q8_0_1024.stderr.txt  llamacpp_q8_0_16384.stderr.txt  llamacpp_q8_0_2048.stderr.txt  llamacpp_q8_0_32768.stderr.txt  llamacpp_q8_0_4096.stderr.txt  llamacpp_q8_0_8192.stderr.txt
